# blackhole

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GOVERNANCE.md  README.md  deny.toml
.github/workflows/: ci.yml
client/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml
client/desktop/src/: api.ts  calls.ts  daemon_lifecycle.ts  link_preview.ts  main.ts  prf_unlock.ts  styles.css  ui_prefs.ts
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/src/: call_stream_bridge.rs  daemon_lifecycle.rs  lib.rs  link_preview.rs  main.rs  network_config.rs  prf_unlock.rs
crates/bh-api/: Cargo.toml
crates/bh-api/src/: call_audio.rs  call_stream.rs  calls.rs  contacts.rs  conversations.rs  cosmetics.rs  dead_mans_switch.rs  device_link.rs  device_sync.rs  ephemeral_identity.rs  export.rs  files.rs  groups.rs  identity.rs  invites.rs  lib.rs  local_auth.rs  message_crypto.rs  message_receive.rs  mls_key_package.rs  moderation.rs  network.rs  panic_wipe.rs  payment_requests.rs  presence.rs  profiles.rs  push.rs  reactions.rs  receipts.rs  safety_number.rs  search.rs  security.rs  server.rs  state.rs  stickers.rs  tree_head.rs
crates/bh-api/tests/: api_smoke.rs
crates/bh-calls/: Cargo.toml
crates/bh-calls/src/: audio.rs  group.rs  lib.rs  media_crypto.rs  screen.rs  session.rs  signaling.rs  transport.rs  video.rs
crates/bh-crypto/: Cargo.toml
crates/bh-crypto/fuzz/: Cargo.toml
crates/bh-crypto/fuzz/fuzz_targets/: fuzz_envelope_decode.rs
crates/bh-crypto/src/: auth.rs  backup.rs  call_keys.rs  device_link.rs  envelope.rs  identity.rs  invite.rs  key_transparency.rs  lib.rs  mls.rs  mls_storage.rs  payment_address.rs  pq_hybrid.rs  push_relay.rs  qr.rs  ratchet.rs  safety_number.rs  webhook.rs
crates/bh-files/: Cargo.toml
crates/bh-files/src/: chunking.rs  download.rs  lib.rs
crates/bh-network/: Cargo.toml
crates/bh-network/fuzz/: Cargo.toml
crates/bh-network/fuzz/fuzz_targets/: fuzz_mailbox_manifest.rs  fuzz_onion_peel_layer.rs  fuzz_sealed_sender_unseal.rs
crates/bh-network/src/: cover_traffic.rs  device_link_relay.rs  dht.rs  eclipse_resistance.rs  key_package_directory.rs  lib.rs  mailbox.rs  onion.rs  pow.rs  prekey_directory.rs  push_relay_directory.rs  routing_admission.rs  sealed_sender.rs  supervised.rs  transport.rs  tree_head.rs
crates/bh-push-relay/: Cargo.toml
crates/bh-push-relay/src/: lib.rs  main.rs  server.rs  state.rs
crates/bh-push-relay/tests/: relay_smoke.rs
crates/bh-storage/: Cargo.toml
crates/bh-storage/src/: contacts.rs  conversations.rs  cosmetics.rs  db.rs  db_key_lock.rs  dead_mans_switch.rs  devices.rs  ephemeral_identity.rs  expiry.rs  files.rs  groups.rs  invites.rs  keystore.rs  lib.rs  local_auth.rs  message_requests.rs  message_stickers.rs  messages.rs  models.rs  own_identity.rs  own_mls_key_package.rs  own_prekey.rs  payment_requests.rs  payments.rs  payments_db.rs  payments_models.rs  payments_schema.rs  profiles.rs  push.rs  reactions.rs  receipts.rs  schema.rs  search.rs  sessions.rs  settings.rs
crates/bh-storage/tests/: data_model.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: SPEC.en.md  SPEC.md  THREAT_MODEL.md
infra/: .env.example  ACCEPTING_COMMUNITY_NODES.md  COMMUNITY_NODE_GUIDE.md  README.md  community-node.env.example  docker-compose.community-node.yml  docker-compose.yml
infra/bootstrap-node/: Dockerfile
infra/caddy/: Caddyfile.example
infra/coturn/: turnserver.conf.example
infra/push-relay/: Dockerfile
infra/systemd/: blackhole-bootstrap-node.service  blackhole-push-relay.service  bootstrap-node.env.example
scripts/: bootstrap.sh
