[workspace]
resolver = "2"
members = [
    "daemon",
    "crates/bh-crypto",
    "crates/bh-network",
    "crates/bh-storage",
    "crates/bh-files",
    "crates/bh-api",
    "client/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bh-crypto = { path = "crates/bh-crypto" }
bh-network = { path = "crates/bh-network" }
bh-storage = { path = "crates/bh-storage" }
bh-files = { path = "crates/bh-files" }
bh-api = { path = "crates/bh-api" }
