[package]
name = "bh-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "blackhole-daemon"
path = "src/main.rs"

[dependencies]
bh-api = { workspace = true }
bh-crypto = { workspace = true }
bh-network = { workspace = true }
bh-storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
getrandom = "0.4"
