[package]
name = "bh-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bh-storage = { workspace = true }
bh-crypto = { workspace = true }
hex = "0.4"
