[package]
name = "bh-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true, features = ["time", "sync", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bh-storage = { workspace = true }
bh-crypto = { workspace = true }
bh-calls = { workspace = true }
cpal = "0.15"
bh-network = { workspace = true }
bh-files = { workspace = true }
blake3 = "1"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
# Constant-time comparison for the daemon bearer token
# (`server.rs::require_bearer_token`) — already in the dependency tree
# transitively via ed25519-dalek/x25519-dalek, promoted to a direct
# dependency here so its use is explicit rather than incidental.
subtle = "2"
base64 = "0.22"
getrandom = "0.4"
ed25519-dalek = "3"
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
# Only HTTP client dependency in any daemon-side crate — used to call an
# operator-configured `bh-push-relay` instance's `POST /register`/
# `/wake/:token` (see push.rs/message_crypto.rs). `rustls-tls` avoids
# pulling in a second TLS stack alongside libp2p's own.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Needed to name the concrete MlsMember<OpenMlsRustCrypto> the group registry
# uses for shadow members (bh-crypto::mls::MlsMember is generic over the
# storage backend as of the MLS persistence work — THREAT_MODEL.md §3.2).
openmls_rust_crypto = "0.5"
# `OpenMlsProvider` itself — needed to write `add_contact_to_live_group`
# generically over both the persistent (own-member) and in-memory
# (shadow-member) providers.
openmls_traits = "0.5"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
keyring = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
bh-push-relay = { workspace = true }
