[package]
name = "bh-crypto"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.4"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# X3DH + Double Ratchet (SPEC.md §2.1): Signal's own `libsignal` is not
# published on crates.io, and the one crate actually named
# `libsignal-protocol` there is an abandoned 0.1.0 with a `rental`
# dependency (known-unsound, unmaintained) — not something to build a
# security-critical app on. Instead we implement the public X3DH/Double
# Ratchet algorithms ourselves, composed entirely from audited primitive
# crates below. This is protocol *composition*, not inventing new crypto —
# consistent with SPEC.md §2.1/§2.2.
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
ed25519-dalek = "3"
chacha20poly1305 = "0.11"

# MLS groups (RFC 9420) — real published crate, reference implementation.
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"

# Post-quantum leg of the X25519+ML-KEM hybrid handshake.
ml-kem = { version = "0.3", features = ["getrandom"] }

# Seed phrase recovery (SPEC.md §4).
bip39 = "2"

# QR/link contact invites (SPEC.md §3) — SVG output only, no raster image
# dependency needed since the client renders it directly in the webview.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
base64 = "0.22"

# Backup passphrase -> key derivation (SPEC.md §4): memory-hard on purpose,
# since a backup file can be brute-forced offline forever once it leaks.
argon2 = "0.5"


# TOTP 2FA (SPEC.md §3) — no server involved, this runs entirely locally.
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Passkeys/FIDO2 (SPEC.md §3): the daemon acts as its own relying party.
# The actual authenticator ceremony (Touch ID / Windows Hello / a FIDO2
# security key) runs in the Tauri webview via the browser's real WebAuthn
# API — modern WKWebView/WebView2 support it natively — and the resulting
# attestation/assertion is handed to the daemon for verification here.
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
