# Literal, not `.workspace = true` — see the identical comment in
# crates/bh-network/Cargo.toml: `crates/bh-crypto/fuzz` path-depends on
# this crate from inside its own standalone `[workspace]`, and Dependabot's
# isolated resolution of that fuzz workspace can't reach the real
# repo-root workspace to satisfy the inheritance.
[package]
name = "bh-crypto"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
thiserror = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.4"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# X3DH + Double Ratchet (SPEC.md §2.1): Signal's own `libsignal` is not
# published on crates.io, and the one crate actually named
# `libsignal-protocol` there is an abandoned 0.1.0 with a `rental`
# dependency (known-unsound, unmaintained) — not something to build a
# security-critical app on. Instead we implement the public X3DH/Double
# Ratchet algorithms ourselves, composed entirely from audited primitive
# crates below. This is protocol *composition*, not inventing new crypto —
# consistent with SPEC.md §2.1/§2.2.
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
ed25519-dalek = "3"
chacha20poly1305 = "0.11"

# MLS groups (RFC 9420) — real published crate, reference implementation.
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"

# Post-quantum leg of the X25519+ML-KEM hybrid handshake.
ml-kem = { version = "0.3", features = ["getrandom"] }

# Seed phrase recovery (SPEC.md §4).
bip39 = "2"

# QR/link contact invites (SPEC.md §3) — SVG output only, no raster image
# dependency needed since the client renders it directly in the webview.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
base64 = "0.22"

# In-chat crypto payment requests (SPEC.md §15): address *format*
# validation only (base58/bech32 decoding, checksum hashing) — not a
# cryptosystem, just parsing a public address string with an audited hash
# function, same "composition of audited primitives" posture as
# safety_number.rs. bs58/bech32 cover BTC; sha3 (Keccak-256) covers both
# ETH's EIP-55 checksum and Monero's base58 checksum.
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.12"
sha3 = "0.10"

# Backup passphrase -> key derivation (SPEC.md §4): memory-hard on purpose,
# since a backup file can be brute-forced offline forever once it leaks.
argon2 = "0.5"


# TOTP 2FA (SPEC.md §3) — no server involved, this runs entirely locally.
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Passkeys/FIDO2 (SPEC.md §3): the daemon acts as its own relying party.
# The actual authenticator ceremony (Touch ID / Windows Hello / a FIDO2
# security key) runs in the Tauri webview via the browser's real WebAuthn
# API — modern WKWebView/WebView2 support it natively — and the resulting
# attestation/assertion is handed to the daemon for verification here.
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

# MLS state persistence (docs/THREAT_MODEL.md §3.2): a real openmls-maintained
# StorageProvider over rusqlite, pointed at our own SQLCipher-keyed
# connection rather than the crate's in-memory default — see mls_storage.rs.
# A dedicated database file/key (same isolation pattern as the payments
# database), not bh-storage's messaging database directly, so this crate
# doesn't need to depend on bh-storage.
openmls_sqlite_storage = "0.2.0"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
hex = "0.4"
