[package]
name = "bh-network"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "identify",
    "macros",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
futures = "0.3"
bh-crypto = { workspace = true }
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
ed25519-dalek = "3"
chacha20poly1305 = "0.11"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

# STUN/TURN (SPEC.md §5.1) aren't wired in yet — libp2p's own hole-punching
# (relay + dcutr) covers a meaningful chunk of what STUN/TURN would. The
# onion routing circuit layer (§5.2) has no mature off-the-shelf crate to
# build on, so it's implemented directly in onion.rs on audited primitives.
