# `version`/`edition`/`publish`/`license` are literal here (not
# `.workspace = true`) rather than inherited from the root workspace, even
# though they'd match it — `crates/bh-network/fuzz` declares its own
# standalone `[workspace]` and path-depends on this crate, and Dependabot's
# isolated per-manifest resolution for that fuzz workspace can't walk up to
# the real repo-root workspace to satisfy the inheritance, failing with
# "failed to find a workspace root". A regular `cargo build --workspace`
# from the repo root is unaffected either way.
[package]
name = "bh-network"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "identify",
    "macros",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
futures = "0.3"
bh-crypto = { workspace = true }
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
ed25519-dalek = "3"
chacha20poly1305 = "0.11"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

# Onion routing (onion.rs, SPEC.md §5.2) packet format: the real Sphinx
# construction (Danezis-Goldberg), via the Nym mixnet project's own
# production implementation — composition of an existing implementation,
# same pattern as `openmls` for MLS, rather than hand-deriving Sphinx's
# filler-string algorithm from scratch (see onion.rs's module doc for why
# that's the wrong call for a from-scratch attempt here).
sphinx-packet = "0.6"
# `sphinx-packet` depends on x25519-dalek 2.x; this workspace is on 3.x.
# Both coexist fine as separate major-version instances, but aren't the
# same Rust type — `onion.rs` converts explicitly at the boundary via this
# aliased import rather than silently picking up whichever version a
# `use` statement happens to resolve to.
x25519-dalek-v2 = { package = "x25519-dalek", version = "2.0.1", features = [
    "static_secrets",
    "getrandom",
] }

# STUN/TURN (SPEC.md §5.1) aren't wired in yet — libp2p's own hole-punching
# (relay + dcutr) covers a meaningful chunk of what STUN/TURN would.
