[package]
name = "bh-push-relay"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower_governor = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
