[package]
name = "bh-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.25", features = ["bundled-sqlcipher"] }
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

# Platform key-storage bindings are still pending — see docs/SPEC.md §7:
#   Secure Enclave (iOS), Keystore/StrongBox (Android) — mobile, out of
#   scope until a mobile client exists.
#   Desktop fallback (Keychain/DPAPI/Secret Service) is implemented via the
#   `keyring` crate. Without a platform feature enabled, `keyring` silently
#   falls back to its in-memory mock store instead of erroring — which
#   looks like it works right up until the process restarts and the "saved"
#   key is gone. The per-target sections below are what actually wire it to
#   the real OS credential store.

# db_key_lock.rs: reuses bh-crypto's existing Argon2id+ChaCha20Poly1305
# passphrase-sealing primitive (backup.rs) to wrap the SQLCipher database
# key behind a user PIN (THREAT_MODEL.md §3.7). bh-crypto has no
# dependency back on bh-storage, so this doesn't create a cycle.
bh-crypto = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }
