[package]
name = "bh-desktop"
version.workspace = true
description = "Blackhole desktop client (Tauri shell) — see docs/SPEC.md §6"
edition.workspace = true
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }

# Link previews (client-only, opt-in — see src/link_preview.rs): a plain
# synchronous HTTP client so the daemon and its network stack are never in
# this request's path. Default features (rustls + gzip) are all we need.
ureq = "3"
url = "2"

# Locating the daemon's per-process API token file (`api_token`, written
# to the same data dir `daemon/src/main.rs`'s own `data_dir()` computes —
# see `lib.rs::data_dir`).
dirs = "6"

# Call-stream bridge (src/call_stream_bridge.rs): the webview can't open
# the daemon's `GET /calls/:call_id/ws` directly (its WebSocket handshake
# always carries an `Origin` header, which `reject_browser_origin` rejects
# — see that module's doc), so this process dials it instead and relays
# frames to the webview via Tauri's event system. Runs on the same async
# runtime Tauri's own async commands already use (`tauri::async_runtime`).
tokio = { workspace = true, features = ["sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
base64 = "0.22"

