[package]
name = "bh-network-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone from the main workspace, matching cargo-fuzz's own
# convention — fuzz targets need a nightly toolchain + sanitizer flags the
# rest of the workspace shouldn't be built with.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
serde_json = "1"

[dependencies.bh-network]
path = ".."

[[bin]]
name = "fuzz_onion_peel_layer"
path = "fuzz_targets/fuzz_onion_peel_layer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sealed_sender_unseal"
path = "fuzz_targets/fuzz_sealed_sender_unseal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mailbox_manifest"
path = "fuzz_targets/fuzz_mailbox_manifest.rs"
test = false
doc = false
bench = false
